components/heptagon/test/bad/t9-initialization.ept
node toto() returns (o : int)
var last x : int;
let
  o = x;
  x = last x;
tel
